--- a/www/templates/comment.html
+++ b/www/templates/comment.html
@@ -1,14 +1,14 @@
 <ion-modal-view>
   <ion-header-bar class="bar-positive">
     <h1 class="title">Comment on {{ activity.title }}</h1>
-    <button class="button" ng-click="closeModal()">
+    <button class="button" ng-click="closeCommentModal()">
       Close
     </button>
   </ion-header-bar>
   <ion-content>
     <div class="list comment">
       <textarea class="comment" placeholder="Comment on this activity" ng-model="commentData.body"></textarea>
-      <button class="button button-positive button-block" ng-click="makeComment(activity.id, user.id)">
+      <button class="button button-positive button-block" ng-click="makeComment(activity.id)">
         Comment
       </button>
     </div>
