--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -56,8 +56,9 @@
       </div>
     </div>
     <div class="list card comment-list" ng-repeat="comment in activity.comments">
-      <div class="item item-divider item-avatar" >
-        <img class="float-left" ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
+      <div class="item item-divider item-avatar">
+        <img class="float-left"
+             ng-src="{{activity.user.image ? activity.user.image : 'img/dummy_images/empty_image.svg'}}">
         <h2 class="activity_title">{{comment.user.name}}</h2>
         <span>{{comment.created_at}}</span>
       </div>
