--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -14,9 +14,9 @@
         <textarea placeholder="Describe the activity" ng-model="activityData.body"></textarea>
       </label>
       <label class="item item-input">Difficulty: &nbsp;
-        <span ng-if="activityData.difficulty == 1"> Easy</span>
-        <span ng-if="activityData.difficulty == 2"> Moderate</span>
-        <span ng-if="activityData.difficulty == 3"> Hard</span>
+        <span ng-if="activityData.difficulty == 1">{{activityData.difficulty_words[0]}}</span>
+        <span ng-if="activityData.difficulty == 2">{{activityData.difficulty_words[0]}}</span>
+        <span ng-if="activityData.difficulty == 3">{{activityData.difficulty_words[0]}}</span>
       </label>
       <div class="item range">
         <input type="range" id="difficulty" ng-model="activityData.difficulty" ng-init="activityData.difficulty = 1" min="1" max="3" value="1" >
