--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -45,8 +45,11 @@
             <p>Recommend</p>
           </div>
           <div class='col'>
-            <i class="icon ion-person card-bottom"></i>
-            <p>Follow</p>
+            <span class="count-icon">
+              <i class="icon ion-person card-bottom"></i>
+              <span class="count-span count-span-follow">{{activity.user.follower_count}}</span>
+              <p>Follow</p>
+            </span>
           </div>
           <div class='col' ng-click="openCommentBox(activity.id)">
             <i class="icon ion-chatboxes card-bottom"></i>
