--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -44,7 +44,7 @@
             <i class="icon ion-android-star-outline card-bottom"></i>
             <p>Recommend</p>
           </div>
-          <div class='col'>
+          <div class='col' ng-click="followUser(activity.user.id)">
             <span class="count-icon">
               <i class="icon ion-person card-bottom"></i>
               <span class="count-span count-span-follow">{{activity.user.follower_count}}</span>
