--- a/www/templates/activity.html
+++ b/www/templates/activity.html
@@ -47,8 +47,8 @@
           <div class='col' ng-click="followUser(activity.user.id)">
             <span class="count-icon">
               <i class="icon ion-person card-bottom"></i>
-              <span class="count-span count-span-follow">{{activity.user.follower_count}}</span>
-              <p>Follow</p>
+              <span class="count-span">{{activity.user.follower_count}}</span>
+              <p>Follow {{activity.user.name}}</p>
             </span>
           </div>
           <div class='col' ng-click="openCommentBox(activity.id)">
