--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -49,7 +49,7 @@
         <div class="col">
           <p class="legal-text">
             By logging in your agree to AdventureMaps's
-            <a ui-sref="#">Terms of Service</a>,
+            <a ui-sref="intro.terms">Terms of Service</a>,
             <a ui-sref="#">Privacy Policy</a>,
             <a ui-sref="#">Cookie Policy</a> and
             <a ui-sref="#">Content Policies</a></p>
