--- a/scss/profile/profile.styles.scss
+++ b/scss/profile/profile.styles.scss
@@ -1,109 +1,90 @@
-.profile-view
-{
-	background-color: $profile-alt-bg;
-	color: $profile-color;
+.profile-view {
+  background-color: $profile-alt-bg;
+  color: $profile-color;
 }
 
-.user-col
-{
-	background-color: $profile-bg;
+.user-col {
+  background-color: $profile-bg;
 
-	.user-image-container
-	{
-		width: 95px;
-		margin: 0px auto;
-		margin-top: 20px;
-	}
+  .user-image-container {
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 95px;
+  }
 
-	.avatar-image
-	{
-		&.pre-img
-		{
-			border-radius: 50%;
-		}
+  .avatar-image {
+    &.pre-img {
+      border-radius: 50%;
+    }
 
-		img
-		{
-			border-radius: 50%;
-			border: 2px solid $profile-color;
-			width: 100%;
-		}
-	}
+    img {
+      border: 2px solid $profile-color;
+      border-radius: 50%;
+      width: 100%;
+    }
+  }
 
-	.user-name
-	{
-		text-align: center;
-		color: $profile-color;
-		font-size: 16px;
-		font-weight: bold;
-	}
+  .user-name {
+    color: $profile-color;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+  }
 
-	.username
-	{
-		text-align: center;
-		color: rgba($profile-color, .7);
-	}
+  .username {
+    color: rgba($profile-color, .7);
+    text-align: center;
+  }
 
-	.user-social
-	{
-		text-align: center;
-		color: $profile-color;
-	}
+  .user-social {
+    color: $profile-color;
+    text-align: center;
+  }
 
-	.user-bio
-	{
-		text-align: center;
-		color: rgba($profile-color, .8);
-		margin: 0px 10% 12%;
-	}
+  .user-bio {
+    color: rgba($profile-color, .8);
+    margin: 0 10% 12%;
+    text-align: center;
+  }
 }
 
-.profile-list
-{
-	.list
-	{
-		background-color: $profile-color;
-	}
+.profile-list {
+  .list {
+    background-color: $profile-color;
+  }
 
-	.profile-divider
-	{
-		height: 35px;
-	}
+  .profile-divider {
+    height: 35px;
+  }
 
-	.list-item
-	{
-		margin-left: 8px;
-		border-left: none;
+  .list-item {
+    border-left: 0;
+    margin-left: 8px;
 
-		&:last-child
-		{
-			border-bottom: none;
-		}
+    &:last-child {
+      border-bottom: 0;
+    }
 
-		.item-content
-		{
-			padding-top: 12px;
-			padding-bottom: 12px;
-			padding-left: 8px;
-		}
+    .item-content {
+      padding-bottom: 12px;
+      padding-left: 8px;
+      padding-top: 12px;
+    }
 
-		.main-text
-		{
-			color: $profile-bg;
-		}
+    .main-text {
+      color: $profile-bg;
+    }
 
-		.badge
-		{
-			font-weight: 300;
-  		font-size: 18px;
-			color: $profile-alt-color;
-			top: 11px;
-		}
+    .badge {
+      color: $profile-alt-color;
+      font-size: 18px;
+      font-weight: 300;
+      top: 11px;
+    }
 
-		.icon
-		{
-			color: $profile-alt-color;
-			font-size: 22px;
-		}
-	}
+    .icon {
+      color: $profile-alt-color;
+      font-size: 22px;
+    }
+  }
 }
